syntax = "proto3";

option java_multiple_files = true;
option go_package = "github.com/SourceForgery/tachikoma";

package com.sourceforgery.tachikoma.mta;

service MTAEmailQueue {
    // The postfix mailer daemon will hang waiting for emails via this stream
    // Once the postfix mailer daemon gets an email, it will start
    // looping out all the recipients. All results will be sent as a request stream here
    rpc GetEmailsWithKeepAlive (stream MTAQueuedNotification) returns (stream EmailMessageOrKeepAlive);
    rpc GetEmails (stream MTAQueuedNotification) returns (stream EmailMessage);

    // This is for mails coming from external mail servers
    rpc IncomingEmail (IncomingEmailMessage) returns (MailAcceptanceResult);
}

message EmailMessage {
    string email_address = 101;
    string from = 102;
    sint64 email_id = 103;
    repeated string bcc = 104;

    string body = 201;
}

message EmailMessageOrKeepAlive {
    oneof email_message_or_keepalive {
        EmailMessage email_message = 1;
        string keep_alive = 2;
   }
}

message IncomingEmailMessage {
    string email_address = 101;
    string from = 102;
    bytes body = 201;
}

message MTAQueuedNotification {
    string queue_id = 101;
    bool success = 102;
    string recipient_email_address = 103;
    sint64 email_id = 104;
}

message MailAcceptanceResult {
    enum AcceptanceStatus {
        ACCEPTED = 0;
        REJECTED = 1;
        IGNORED = 2;
    }
    AcceptanceStatus acceptance_status = 101;
}
